--- a/src/components/LogoContainer/style.module.css
+++ b/src/components/LogoContainer/style.module.css
@@ -5,3 +5,12 @@
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 400px) {
+
+  .container {
+    width: 5.4em;
+    height: 5.4em;
+  }
+
+}
