--- a/src/components/NavBar/style.module.css
+++ b/src/components/NavBar/style.module.css
@@ -25,7 +25,7 @@
 }
 @media (max-width: 880px) {
   .navBarMenuOpened {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
 
@@ -34,7 +34,7 @@
     -webkit-backdrop-filter: blur(5.9px);
 
     transition: 0.5s;
-    z-index: 2;
+    z-index: 7;
     overflow: hidden;
   }
 
@@ -47,7 +47,7 @@
     background-color: rgba(255, 255, 255, 0.5);
     -webkit-backdrop-filter: blur(0.1em);
     backdrop-filter: blur(0.1em);
-    z-index: 2;
+    z-index: 7;
     transition: 0.2s;
   }
 }
