--- a/src/sections/Contact/style.module.css
+++ b/src/sections/Contact/style.module.css
@@ -1,5 +1,5 @@
 .contact {
-  min-height: 600px;
+  min-height: 400px;
   width: 100%;
   overflow: hidden;
 }
@@ -7,7 +7,7 @@
 .wrapper {
   width: 100%;
   padding: 0;
-  margin-top: 100px;
+  margin: 50px 0;
   display: flex;
   justify-content: center;
   align-items: center;
