--- a/src/components/ProjectCard/style.module.css
+++ b/src/components/ProjectCard/style.module.css
@@ -2,6 +2,19 @@
   margin: 0 auto;
   width: 1000px;
   position: relative;
+  animation: revealProjectCard 1s;
+}
+
+@keyframes revealProjectCard {
+  0%{
+    opacity: 0%;
+    transform: translateY(100px);
+  }
+  100%{
+    opacity: 100%;
+    transform: translateY(0);
+
+  }
 }
 
 .positionRight {
