--- a/src/sections/About/style.module.css
+++ b/src/sections/About/style.module.css
@@ -1,5 +1,3 @@
-
-
 .about {
   min-height: 100vh;
   width: 100%;
@@ -14,7 +12,6 @@
   min-height: inherit;
   justify-content: center;
   align-items: center;
-
 }
 
 .rowOne {
@@ -23,6 +20,18 @@
   justify-content: center;
   align-items: center;
   gap: 50px;
+  animation: revealDescription 1s;
+}
+
+@keyframes revealDescription {
+  0% {
+    opacity: 0%;
+    gap: 200px;
+  }
+  100% {
+    opacity: 100%;
+    gap: 50px;
+  }
 }
 
 .description {
@@ -39,7 +48,7 @@
 }
 
 .descriptionLightMode {
-  color: var(--text-color-lightmode)
+  color: var(--text-color-lightmode);
 }
 
 .rowTwo {
@@ -49,6 +58,18 @@
   flex-direction: column;
   gap: 40px;
   padding-bottom: 20px;
+  animation: revealTechs 1s;
+}
+
+@keyframes revealTechs {
+  0% {
+    opacity: 0%;
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 100%;
+    transform: translateY(0);
+  }
 }
 
 .techBlock {
@@ -64,15 +85,15 @@
 .techBlock h2 {
   font-size: 1.5em;
   font-weight: 400;
-  font-family: var(--font-title-secondary)
+  font-family: var(--font-title-secondary);
 }
 
 .techTitleLightMode {
-  color: var(--text-color-lightmode)
+  color: var(--text-color-lightmode);
 }
 
 .techTitleDarkMode {
-  color: var(--text-color-darkmode)
+  color: var(--text-color-darkmode);
 }
 
 .techs {
@@ -95,7 +116,6 @@
 }
 
 @media (max-width: 800px) {
-
   .rowOne {
     margin-top: 20px;
     flex-direction: column;
@@ -115,10 +135,9 @@
 
   .techBlock {
     flex-direction: column;
-    
   }
 
-  .techBlock h2{
+  .techBlock h2 {
     width: 100%;
     text-align: start;
     margin-bottom: 15px;
@@ -130,7 +149,6 @@
 }
 
 @media (max-width: 720px) {
-
   .rowOne {
     margin-top: 40px;
     gap: 10px;
@@ -139,5 +157,4 @@
   .description {
     width: 100%;
   }
-
 }
