--- a/src/sections/Contact/style.module.css
+++ b/src/sections/Contact/style.module.css
@@ -4,6 +4,17 @@
   overflow: hidden;
 }
 
+@keyframes revealContact {
+  0% {
+    opacity: 0%;
+    gap: 200px;
+  }
+  100% {
+    opacity: 100%;
+    gap: 0px;
+  }
+}
+
 .wrapper {
   width: 100%;
   padding: 0;
@@ -11,6 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  animation: revealContact 1s;
 }
 
 .mail {
