--- a/src/sections/Projects/style.module.css
+++ b/src/sections/Projects/style.module.css
@@ -1,11 +1,11 @@
 .projects {
-  min-height: 200px;
+  min-height: 100vh;
   width: 100%;
 }
 
 .works {
   margin: 80px 0;
-  min-height: 200px;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
