new update: adding pre-wrap propertie to p tag.

--- a/src/sections/About/style.module.css
+++ b/src/sections/About/style.module.css
@@ -41,6 +41,7 @@
   line-height: 30px;
   font-weight: 300;
   font-family: var(--font-description);
+  white-space: pre-wrap;
 }
 
 .descriptionDarkMode {
